DAY-3/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    owner: himanshu
    purpose: training
  annotations:
    talktotechie.com/notes: "K8s primitives demo on Minikube"
