DAY-3/09-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-web
  namespace: demo
spec:
  selector:
    matchLabels:
      app: node-web
  template:
    metadata:
      labels:
        app: node-web
    spec:
      containers:
        - name: web
          image: nginxdemos/hello:plain-text
          ports:
            - containerPort: 80
              hostPort: 31080
