DAY-3/multi-con.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-con
spec:
  containers:
    - name: c1
      image: tomcat:9
    - name: c2
      image: nginx:latest
    - name: c3
      image: redis:latest
    - name: c4
      image: rockylinux:9
      command: ["/bin/sh", "-c", "sleep 3600"]
