DAY-3/04-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
  namespace: demo
spec:
  type: NodePort
  selector:
    app: hello
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
