DAY-3/05-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lb
  namespace: demo
spec:
  type: LoadBalancer
  selector:
    app: hello
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
