DAY-3/06-svc-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: extname-example
  namespace: demo
spec:
  type: ExternalName
  externalName: example.com
