DAY-3/07-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-headless
  namespace: demo
spec:
  clusterIP: None
  selector:
    app: hello
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
